[package]
name = "Find_satoshi_key"
version = "0.0.7"
edition = "2021"

build = "build.rs"

[dependencies]
rand = "0.8.5"

libloading = "0.8.1"
libc = { version = "0.2.149", features = [] }

num_cpus = "1.13.0"
tokio = { version = "1.20.1", features = ["full"] }
hex = "0.4.3"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"